// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemovableTag renders as disabled 1`] = `
<span
  className="lab-tag lab-tag--removable lab-tag--disabled lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test render a disabled RemovableTag
  <span
    className="lab-tag__remove-icon-wrapper"
  >
    <span
      className="lab-icon lab-icon--remove lab-icon--black75 lab-icon--petit lab-icon--remove-icon"
    />
  </span>
</span>
`;

exports[`RemovableTag renders as outline 1`] = `
<span
  className="lab-tag lab-tag--removable lab-tag--outline lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test render an outline RemovableTag
  <span
    className="lab-tag__remove-icon-wrapper"
  >
    <span
      className="lab-icon lab-icon--remove lab-icon--black75 lab-icon--petit lab-icon--remove-icon"
    />
  </span>
</span>
`;

exports[`RemovableTag renders with a green color 1`] = `
<span
  className="lab-tag lab-tag--removable lab-tag--green-pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test render green RemovableTag
  <span
    className="lab-tag__remove-icon-wrapper"
  >
    <span
      className="lab-icon lab-icon--remove lab-icon--black75 lab-icon--petit lab-icon--remove-icon"
    />
  </span>
</span>
`;

exports[`RemovableTag renders with base props 1`] = `
<span
  className="lab-tag lab-tag--removable lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test RemovableTag
  <span
    className="lab-tag__remove-icon-wrapper"
  >
    <span
      className="lab-icon lab-icon--remove lab-icon--black75 lab-icon--petit lab-icon--remove-icon"
    />
  </span>
</span>
`;
